# Crypto-Coin

./: .gitignore  README.md  blockchain.py  config.py  helper.py  main.py  requirement.txt  transaction_rules.py
api/: background.py  custom_objects.py  flask_server.py
miner/: CMakeLists.txt  CryptoCoinMiner.cpp  README.md  block.cpp  block.h  config.json  main.cpp  mining.py  sha256.cpp  sha256.h
node/: node.py  remove_old.py  server.py
testing/: many_bots.py
